# OSINTko

./: .getopt.sh  .gitignore  README.md  build.sh
auto/: clean  config
kali-config/: variant-default
kali-config/common/includes.chroot/usr/share/tracer/: .editorconfig  LICENSE  README.md  pyproject.toml  requirements.txt  settings.conf
kali-config/common/includes.chroot/usr/share/tracer/.github/ISSUE_TEMPLATE/: bug_report.md  false-username-detection.md  feature_request.md
kali-config/common/includes.chroot/usr/share/tracer/data/: logo.txt  pool.json  user_agents.json
kali-config/common/includes.chroot/usr/share/tracer/tests/: test_result.py  test_tracer.py  test_website.py  test_websitepool.py
kali-config/common/includes.chroot/usr/share/tracer/tracer/: __init__.py  __main__.py  loader.py  tracer.py
kali-config/common/includes.chroot/usr/share/tracer/tracer/gui/: __init__.py  app.py
kali-config/common/includes.chroot/usr/share/tracer/tracer/gui/static/css/: main.css
kali-config/common/includes.chroot/usr/share/tracer/tracer/gui/static/js/: search.js
kali-config/common/includes.chroot/usr/share/tracer/tracer/gui/templates/: base.html  index.html
kali-config/common/includes.chroot/usr/share/tracer/tracer/models/: __init__.py  category.py  parser.py  result.py  textanimation.py  website.py  websitepool.py
kali-config/installer-default/: packages
kali-config/installer-everything/: packages
kali-config/installer-netinst/: packages
kali-config/installer-purple/: packages
simple-cdd/: disc-end-hook  simple-cdd.conf
(+482 files in other folders)
