[tool.poetry]
name = "tracer"
version = "1.0.2"
description = "A simple username checker for social media websites"
authors = ["Christian <64144555+chr3st5an@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
aiohttp = "^3.8.4"
colorama = "^0.4.6"
aiofiles = "^23.1.0"
pyvis = "^0.3.1"
aiohttp-jinja2 = "^1.5.1"
Jinja2 = "^3.1.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.0.1"
isort = "^5.12.0"
flake8 = "^6.0.0"

[tool.isort]
combine_star = true
combine_as_imports = true
from_first = true
lines_after_imports = 2
length_sort = true
line_length = 120
skip_gitignore = true
use_parentheses = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
